--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
           </ul>
         </div>
       </div>
-      <div class="overlay is-hidden" data-modal>
-        <div class="modal">
+      <div class="modal " data-modal>
+        <div class="box">
           <button type="button" class="close-btn" data-modal-close>X</button>
         </div>
       </div>
