--- a/index.html
+++ b/index.html
@@ -132,31 +132,39 @@
           <h2 class="h2-main">Czym się zajmujemy</h2>
           <ul class="ul-main ul-flex">
             <li class="li-about-us">
+
+              <div class="about-us-box">
               <img
                 src="images/About_Us/box1.jpg"
                 alt="Programista pisze stronę"
                 width="370"
                 height="294"
               />
-            </li>
-            <li class="li-about-us">
+<div>
+<h3 class="about-us-text">APLIKACJE KOMPUTEROWE</h3>    </div>   </div>    </li>
+            <li class="li-about-us"><div class="about-us-box">
               <img
                 src="images/About_Us/box2.jpg"
                 alt="Programista pisze aplikacje na telefon"
                 width="370"
                 height="294"
               />
-            </li>
-            <li>
+
+<div>
+  <h3 class="about-us-text">APLIKACJE MOBILNE</h3>
+</div> </div>          
+ </li>
+            <li><div class="about-us-box">
               <img
                 src="images/About_Us/box3.jpg"
                 alt="Programista sprawdza grafikę na tablecie"
                 width="370"
                 height="294"
               />
+              <div><h3 class="about-us-text">ROZWIĄZANIA GRAFICZNE</h3></div>
             </li>
           </ul>
-        </div>
+        </div></div>
       </section>
       <!-- Our Team-->
       <section class="section-team section">
