--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,7 @@
           <ul class="ul-main ul-flex portfolio-img">
             <li>
               <figure class="figure-portfolio">
+                <div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-1.jpg"
