--- a/portfolio.html
+++ b/portfolio.html
@@ -95,8 +95,8 @@
           <ul class="ul-main ul-flex portfolio-img">
             <li>
               <figure class="figure-portfolio">
-                <div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
-                <img
+                <div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div><img
                   class="img-portfolio"
                   src="images/portfolio/img-1.jpg"
                   alt="Strona internetowa"
@@ -110,7 +110,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-2.jpg"
@@ -127,7 +127,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-3.jpg"
@@ -142,7 +142,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-4.jpg"
@@ -157,7 +157,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-5.jpg"
@@ -172,7 +172,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-6.jpg"
@@ -187,7 +187,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-7.jpg"
@@ -202,7 +202,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-8.jpg"
@@ -217,7 +217,7 @@
               </figure>
             </li>
             <li>
-              <figure class="figure-portfolio">
+              <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
                   src="images/portfolio/img-9.jpg"
