--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container">
           <ul class="ul-main ul-flex portfolio-img">
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio">
                 <div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                 </div><img
@@ -107,9 +107,9 @@
                   <h3 class="h3-portfolio">Technocrack</h3>
                   <p class="p-description">Strona internetowa</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -124,9 +124,9 @@
                   </h3>
                   <p class="p-description">Dizajn</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -139,9 +139,9 @@
                   <h3 class="h3-portfolio">Restauracja Seafood</h3>
                   <p class="p-description">Aplikacja</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -154,9 +154,9 @@
                   <h3 class="h3-portfolio">Projekt Prime</h3>
                   <p class="p-description">Marketing</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -169,9 +169,9 @@
                   <h3 class="h3-portfolio">Projekt Boxes</h3>
                   <p class="p-description">Aplikacja</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -184,9 +184,9 @@
                   <h3 class="h3-portfolio">Inspiration has no Borders</h3>
                   <p class="p-description">Strona internetowa</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -199,9 +199,9 @@
                   <h3 class="h3-portfolio">Magazyn Limited Edition</h3>
                   <p class="p-description">Dizajn</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -214,9 +214,9 @@
                   <h3 class="h3-portfolio">Projekt LAB</h3>
                   <p class="p-description">Marketing</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
-            <li>
+            <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -229,7 +229,7 @@
                   <h3 class="h3-portfolio">Growing Business</h3>
                   <p class="p-description">Aplikacja</p>
                 </figcaption>
-              </figure>
+              </figure></div>
             </li>
           </ul>
         </div>
