--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
           </ul>
         </div>
       </div>
-      <div class="overlay " data-modal>
-        <div class="modal">
+      <div class="overlay is-hidden" data-modal>
+        <div class="modal ">
           <button type="button" class="close-btn" data-modal-close>X</button>
         </div>
       </div>
