--- a/portfolio.html
+++ b/portfolio.html
@@ -102,14 +102,15 @@
                   alt="Strona internetowa"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Technocrack</h3>
                   <p class="p-description">Strona internetowa</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
-            <li><div class="technocrack-div">
+            <li>
+              <div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
                 <img
                   class="img-portfolio"
@@ -117,14 +118,15 @@
                   alt="Koszykarze"
                   width="370"
                   height="294"
-                />
+                /></figure>
+              </div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">
                     Grafika New Orlean vs Golden Star
                   </h3>
                   <p class="p-description">Dizajn</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -134,12 +136,12 @@
                   alt="Logo restauracji"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Restauracja Seafood</h3>
                   <p class="p-description">Aplikacja</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -149,12 +151,12 @@
                   alt="Słuchawki"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Projekt Prime</h3>
                   <p class="p-description">Marketing</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -164,12 +166,12 @@
                   alt="pudełka"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Projekt Boxes</h3>
                   <p class="p-description">Aplikacja</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -179,12 +181,12 @@
                   alt="Komputer"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Inspiration has no Borders</h3>
                   <p class="p-description">Strona internetowa</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -194,12 +196,12 @@
                   alt="Czasopismo"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Magazyn Limited Edition</h3>
                   <p class="p-description">Dizajn</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -209,12 +211,12 @@
                   alt="zawieszka"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Projekt LAB</h3>
                   <p class="p-description">Marketing</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
             <li><div class="technocrack-div">
               <figure class="figure-portfolio"><div class="technocrack-container"><p class="technocrack-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
@@ -224,12 +226,12 @@
                   alt="komputer"
                   width="370"
                   height="294"
-                />
+                /></div>
                 <figcaption class="figcaption-main">
                   <h3 class="h3-portfolio">Growing Business</h3>
                   <p class="p-description">Aplikacja</p>
                 </figcaption>
-              </figure></div>
+              </figure>
             </li>
           </ul>
         </div>
